# WindGenerator

./: CLAUDE.md  README.md  pyproject.toml
data/: README.md
outputs/: mel_stats.json
outputs/audit/: audit_report.csv  audit_source_counts.csv  audit_summary.txt
outputs/train_ddpm/: final_model.pt
scripts/: audit_dataset.py  compute_mel_stats.py  generate_audio.py  inspect_batch.py  prepare_dataset.py  sample_audio.py  train_diffusion.py  train_vocoder.py  train_vocoder_gan.py  train_vocoder_stft.py
src/windgen/: dataset.py  mels.py  viz.py  vocoder_tiny.py
src/windgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
