[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "windgen"
version = "0.1.0"
description = "Wind sound generation with spectrogram diffusion"
authors = [{name = "Alper"}]
dependencies = [
    "torch",
    "torchaudio",
    "librosa",
    "diffusers",
    "transformers",
    "accelerate",
    "soundfile",
    "matplotlib",
    "pandas",
    "tqdm"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]